public/css/merchants/style.css
/* ... */
.header__lang span {
    position: relative;
    display: inline-block;
    margin-left: 6px;
    width: 24px;
    color: #242424;
    font-size: 10px;
    font-family: 'Verdana', sans-serif;
    font-weight: bold;
    line-height: 20px;
    text-align: center;
    background-color: #ffe447;
    border-radius: 4px;
    vertical-align: top;
}

.header__lang span::after {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 4px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 6px 9px 0 0;
    border-color: #ffe447 transparent transparent transparent;
}

.navigation {
    margin-right: 8px;
}

.navigation a {
    display: inline-block;
    margin-right: 30px;
    color: #fff;
    font-size: 16px;
    font-family: 'Lato', sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    text-decoration: none;
    font-weight: 500;
}

.header-shop__user-info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: 0 16px;
}

.header-shop__add {
    flex-basis: 30%;
}
.user__icon {
    margin-right: 16px;
}

.user-icon__figure {
    margin: 0;
    width: 42px;
    height: 42px;
    text-align: center;
    border: 1px solid #222427;
    border-radius: 50%;
    overflow: hidden;
}

.user__name {
    position: relative;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;

    padding-right: 15px;
    max-width: 150px;
    color: #fff;
    font-size: 16px;
    font-family: 'Lato', sans-serif;
    font-weight: bold;
    line-height: 1.27;
    cursor: pointer;
}

.user__name--logout .user__logout {
    display: block;
}

.user__name__txt {
    display: block;
    width: 100%;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.user__name__arrow {
    position: absolute;
    right: 0;
    top: 50%;
    width: 0;
    height: 0;
    border: 4px solid transparent;
    border-top-color: #fff;
    transition: transform 0.22s linear;
}

.user__name--logout .user__name__arrow {
    border-top-color: transparent;
    border-bottom-color: #fff;
    transform: translateY(-50%);
}
.user__status {
    border: 1px solid #ffe447;
    border-radius: 5px;
    padding:5px 15px;
    height:54px;
}
.user__status>.user__status-text {
    color: #ffe447;
    font-size: 16px;
}

.user__logout {
    display: none;
    z-index: 5;
    position: absolute;
    bottom: -45px;
    right: 4px;
    min-width: 86px;
    padding: 8px 10px 8px 10px;
    background-color: #fff;
    box-shadow: 0 2px 4px 0px rgba(0,0,0, 0.14);
}

.user__logout::before {
    content: '';
    position: absolute;
    bottom: 100%;
    right: 0;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 6px 6px;
    border-color: transparent transparent #fff transparent;
}

.user__logout__txt {
    display: block;
    color: #2c2c2c;
    font-size: 12px;
    text-decoration: none;
}

.user__logout__icon {
    display: inline-block;
    margin-right: 12px;
    width: 12px;
    height: 12px;
    vertical-align: sub;
    background: transparent url('../img/logout-icon.svg')no-repeat center center;
    -webkit-background-size: contain;
    background-size: contain;
}

/* Main */
.main.store-page {
    padding-top: 150px;
}

.main.login-page {
    padding: 20px 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.main.contact-page {
    padding: 40px 0 20px;
}

.main.tell-page {
    padding: 50px 0 70px;
}

.main.forgot-pass {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 10px;
}

.page-title {
    margin-bottom: 40px;
    color: #fff;
    font-size: 45px;
    font-family: 'Charter', sans-serif;
    line-height: 1.1;
    font-weight: bold;
    text-align: center;
    text-shadow: 0px 2px 4px #000000;
}

.page-title--short {
    margin-left: auto;
    margin-right: auto;
    max-width: 472px;
}

.form-min,
.form-forgot {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    max-width: 460px;
}

.form-content {
    margin-bottom: 40px;
}

.form-content--min-margin {
    margin-bottom: 16px;
}

.form-content--mid-margin {
    margin-bottom: 19px;
}

.form-content input {
    width: 100%;
}

.login-form__inp-wr {
    position: relative;
}

.login-form__info {
    margin-left: auto;
    margin-right: auto;
    max-width: 386px;
    font-size: 16px;
    text-align: center;
    opacity: 0.9;
}

.login-form__info a {
    color: inherit;
    text-decoration: none;
}

.login-form__inp-wr input {
    padding-left: 40px;
}

.form-wrapper-half {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}

.form-content-half {
    width: 48%;
    margin-bottom: 40px;
}

.form-multiple {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.form-multiple-cont {
    margin-bottom: 40px;
    -webkit-box-flex: 1;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
}

.from-multiple-code {
    margin-left: 25px;
    width: 114px;
    height: 40px;
    text-align: center;
}

.from-multiple-code span {
    display: block;
    padding: 8px 2px;
    color: rgba(255,255,255,0.4);
    font-size: 18px;
    font-weight: bold;
    border-radius: 6px;
    background: #f1319d;
    background-image: -webkit-radial-gradient(0px 40px, farthest-corner, #ff6c50 0%, #f1319d 100%);
    background-image: -o-radial-gradient(0px 40px, farthest-corner, #ff6c50 0%, #f1319d 100%);
    background-image: radial-gradient(farthest-corner at 0px 40px, #ff6c50 0%, #f1319d 100%);
}
/* ... */

